<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="vertical" >

    <ViewStub
        android:id="@+id/vsHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@+id/header"
        android:layout="@layout/header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="6dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button03"
                style="@style/HomeButton"
                android:drawableTop="@drawable/calendar"
                android:text="@string/addUser" />

            <Button
                android:id="@+id/Button04"
                style="@style/HomeButton"
                android:drawableTop="@drawable/steak_128"
                android:onClick="onButtonClicker"
                android:text="@string/food" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button02"
                style="@style/HomeButton"
                android:drawableTop="@drawable/help"
                android:onClick="onButtonClicker"
                android:text="@string/help" />

            <Button
                android:id="@+id/Button01"
                style="@style/HomeButton"
                android:drawableTop="@drawable/info"
                android:onClick="onButtonClicker"
                android:text="@string/about" />
        </LinearLayout>

</LinearLayout>

</LinearLayout>