<?xml version="1.0" encoding="utf-8"?>

    <TabHost android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:id="@+id/tabHost"
    	xmlns:android="http://schemas.android.com/apk/res/android">
    
    	<TabWidget
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:id="@android:id/tabs"/>
    	
     	<FrameLayout
     			android:layout_width="fill_parent"
    			android:layout_height="fill_parent"
    			android:id="@android:id/tabcontent">
     
     		<LinearLayout
     			android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:id="@+id/tab1"
    			android:orientation="horizontal"
    			android:paddingTop="60dp"> 

     		    <!-- android:layout_height="100dp"  -->
     		    
     			<TextView  
    				android:layout_width="fill_parent" 
    				android:layout_height="wrap_content"
    				android:text="@string/tab1"
    				android:textIsSelectable="true"
    				android:id="@+id/txt1"/>   
    			
   				
     			<Button android:id="@+id/buttonCall" 
		     		android:drawableLeft="@drawable/tick"
	  				android:text="@string/action_call"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
    			
		
    			
     		</LinearLayout>
     		
     		
     
     		<LinearLayout
     			android:layout_width="fill_parent"
    			android:layout_height="fill_parent"
    			android:id="@+id/tab2"
    			android:orientation="vertical"
    			android:paddingTop="60dp"> 
     
     			<TextView  
    				android:layout_width="fill_parent" 
    				android:layout_height="100dp" 
    				android:text="@string/tab2"
    				android:id="@+id/txt2"/>
   
     		</LinearLayout>
     
      		<LinearLayout
     			android:layout_width="fill_parent"
    			android:layout_height="fill_parent"
    			android:id="@+id/tab3"
    			android:orientation="vertical"
    			android:paddingTop="60dp"> 
     
     		<TextView  
    			android:layout_width="fill_parent" 
    			android:layout_height="50dp" 
    			android:text="@string/tab3"
   				android:id="@+id/txt3"/>
     		
     		<TextView  
    			android:layout_width="fill_parent" 
    			android:layout_height="50dp" 
    			android:text="@string/tab4"
   				android:id="@+id/txt4"/>
   
     		</LinearLayout>
     		
      	
     </FrameLayout>
    
    </TabHost>