<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FFFFFF">
	<!-- 
    <EditText android:id="@+id/nameUser" 
		  android:layout_width="fill_parent"
		  android:layout_height="0dip" 
		  android:layout_weight="1"
		  android:inputType="text"
		  android:hint="@string/name"></EditText>
		   -->
		   
	<TextView
	    android:id="@+id/nameUser" 
	    android:paddingTop="40dp"
	    android:paddingLeft="15dp"
	    android:textColor="#20534e"
			android:textStyle="bold"
        	android:textSize="18sp"
		  android:layout_width="fill_parent"
		  android:layout_height="0dip" 
		  android:layout_weight="1"
		  android:textIsSelectable="true"
		  android:hint="@string/name"
	    ></TextView>
    
     <EditText android:id="@+id/textSubject" 
		  android:layout_width="fill_parent"
		  android:layout_height="0dip" 
		  android:layout_weight="1"
		  android:inputType="text"
		  android:hint="@string/subject"></EditText>
     
     <EditText android:id="@+id/textMessage" 
		  android:layout_width="fill_parent"
		  android:layout_height="0dip" 
		  android:layout_weight="1"
		  android:inputType="text"
		  android:hint="@string/body"></EditText>
     
     <Button android:id="@+id/send" 
		    style= "@style/btnStyle"
		    android:drawableLeft="@drawable/pencil"
		    android:layout_marginLeft="90dp"
	  		android:text="@string/enter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
    </LinearLayout>