<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip" >
    
    <!-- Image left sied -->
    <ImageView
            android:id="@+id/list_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:padding="3dip"
        	android:layout_alignParentLeft="true"
            android:src="@drawable/note_32"
            android:contentDescription="@string/events"/>
    
    <!-- Title android:typeface="sans" -->
    <TextView android:id="@+id/Txt1"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:gravity="center_vertical"
  		android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_alignTop="@+id/list_image"
        android:layout_toRightOf="@+id/list_image" ></TextView>
    
    <!-- Name -->
    
    <TextView
        android:id="@+id/nameChild"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Txt1"
        android:textColor="#343434"
        android:textSize="12sp"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/list_image"
        android:text="@string/name" />
    
    <!-- Date -->
    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/Txt1"
        android:gravity="right"
        android:text="@string/date"
        android:layout_marginRight="5dip"
        android:textSize="12sp"
        android:textColor="#336699" 
        android:textStyle="bold"/>
    
    <!-- Body -->
    
    <TextView
        android:id = "@+id/invisibleBody"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    
    <!-- Rightend Arrow 
     <ImageView 
         android:id="@+id/btnShowEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/forward_32"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:contentDescription="@string/show_events"/> -->
    
    </RelativeLayout>